@@ -20,6 +20,10 @@ namespace dgm {
 		
 		/**
 		 *  \brief Render state logic
+		 * 
+		 *  Only issue calls to window.draw in from within this function.
+		 *  You should NOT call dgm::Window::beginDraw and dgm::Window::endDraw
+		 *  as those will be called for you.
 		 */
 		virtual void draw() = 0;
 
@@ -31,6 +35,15 @@ namespace dgm {
 		 */
 		virtual void restoreFocus() {}
 		
+		/**
+		 *  Return color that will be used as window clear color
+		 *  for the next frame. If you're OK with black (most use cases)
+		 *  you don't have to override this method.
+		 */
+		virtual [[nodiscard]] sf::Color getClearColor() const {
+			return sf::Color::Black;
+		}
+
 		virtual [[nodiscard]] bool isTransparent() const noexcept = 0;
 
 		AppState(dgm::App& app) : app(app) {}
